--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,8 +1,51 @@
 /*  font-family: 'Playfair Display', serif;
 font-family: 'Poppins', sans-serif;*/
-h1 {
-  font-family: "Playfair Display", serif;
-}
 p {
   font-family: "Poppins", sans-serif;
+}
+.hero {
+  background-color: #f9f7fe;
+  text-align: center;
+  padding: 160px 20px;
+}
+
+.hero p {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 54px;
+  color: #272142;
+}
+
+.hero h1 {
+  font-family: "Playfair Display";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 96px;
+  line-height: 128px;
+}
+.hero h2 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  color: #272142;
+}
+.hero a {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+  color: #ffffff;
+  padding: 18px 30px;
+  width: 200px;
+  height: 63px;
+  left: 618px;
+  top: 566px;
+
+  background: #6c63ff;
+  border-radius: 4px;
 }
