--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,10 +1,12 @@
-/*  font-family: 'Playfair Display', serif;
-font-family: 'Poppins', sans-serif;*/
+:root {
+  --branding-color: #6c63ff;
+  --primary-color: #f9f7fe;
+}
 p {
   font-family: "Poppins", sans-serif;
 }
 .hero {
-  background-color: #f9f7fe;
+  background-color: var(--primary-color);
   text-align: center;
   padding: 160px 20px;
 }
@@ -41,11 +43,98 @@ p {
   line-height: 27px;
   color: #ffffff;
   padding: 18px 30px;
-  width: 200px;
-  height: 63px;
-  left: 618px;
-  top: 566px;
-
-  background: #6c63ff;
+  background: var(--branding-color);
   border-radius: 4px;
+}
+.projects {
+  margin: 60px auto !important;
+  max-width: 1400px;
+}
+.projects h2 {
+  font-family: "Playfair Display";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 85px;
+}
+.projects-header {
+  color: #272142;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+}
+.description {
+  padding: 120px;
+}
+@media (max-width: 1100px) {
+  .description {
+    padding: 30px;
+    text-align: center;
+  }
+}
+@media (max-width: 700px) {
+  .hero h1 {
+    font-size: 50px;
+  }
+  .projects h2 {
+    font-size: 44px;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
+}
+.projects-description {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  color: rgba(39, 33, 66, 0.7);
+}
+.projects a {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  padding: 15px 30px;
+}
+
+.work-inquiry {
+  background-color: var(--primary-color);
+  max-width: 1400px;
+}
+.work-inquiry h2 {
+  font-family: "Playfair Display";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 64px;
+}
+.work-inquiry p {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: rgba(39, 33, 66, 0.7);
+}
+.work-inquiry a {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+  color: #ffffff;
+  padding: 18px 30px;
+  background: var(--branding-color);
+  border-radius: 4px;
+}
+.test {
+  padding-left: 50px;
 }
