--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -119,6 +119,12 @@ i {
   .navigation-bar {
     padding: 10px 0 !important;
   }
+  .about-me h1 {
+    font-size: 50px;
+  }
+  .about-me h2 {
+    font-size: 44px;
+  }
 }
 
 .projects-description {
@@ -195,4 +201,46 @@ i {
 }
 .instagram {
   padding: 11px 12px;
+}
+.nahid-norouzi {
+  border-radius: 15px;
+}
+.about-me h1 {
+  font-family: "Playfair Display";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 85px;
+  margin-bottom: 30px;
+}
+.about-me h2 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 27px;
+  color: #272142;
+  margin-bottom: 30px;
+}
+.about-me p {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  color: rgba(39, 33, 66, 0.7);
+  margin-bottom: 30px;
+}
+.about-me a {
+  display: inline-block;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+  color: #ffffff;
+  padding: 18px 30px;
+  background: var(--branding-color);
+  border-radius: 4px;
+  text-decoration: none;
 }
