--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -13,6 +13,14 @@ i {
   font-weight: 400;
   font-size: 18px;
 }
+li a {
+  font-family: "Poppins";
+  font-size: 16px;
+  color: rgba(39, 33, 66, 0.7);
+}
+.active {
+  color: var(--branding-color) !important;
+}
 .navigation-bar {
   padding: 50px 120px 0 !important;
 }
